<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (c) 2010 Ronny Röhricht This file is part of Moloko. Moloko is
      free software: you can redistribute it and/or modify it under the terms of
      the GNU General Public License as published by the Free Software
      Foundation, either version 3 of the License, or (at your option) any later
      version. Moloko is distributed in the hope that it will be useful, but
      WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
      or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
      for more details. You should have received a copy of the GNU General
      Public License along with Moloko. If not, see
      <http://www.gnu.org/licenses/>. Contributors: Ronny Röhricht -
      implementation
   -->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:moloko="http://schemas.android.com/apk/res/dev.drsoran.moloko">

   <PreferenceScreen
      android:title="@string/moloko_prefs_rtm_title"
      android:summary="@string/moloko_prefs_rtm_summary">

      <PreferenceScreen
         android:key="dev.drsoran.moloko"
         android:title="@string/acc_pref_account_tilte"
         android:summary="@string/acc_pref_account_summary">
         <intent
            android:action="dev.drsoran.moloko.auth.prefs.account.MAIN">
         </intent>
      </PreferenceScreen>

      <dev.drsoran.moloko.prefs.TimezonePreference
         android:title="@string/moloko_prefs_rtm_timezone_title"
         android:summary="%s"
         android:key="@string/key_timezone_local"
         moloko:syncWithRtmKey="@string/key_timezone_sync_with_rtm" />

      <dev.drsoran.moloko.prefs.SyncableListPreference
         android:title="@string/moloko_prefs_rtm_dateformat_title"
         android:summary="%s"
         android:entries="@array/moloko_prefs_rtm_dateformat"
         android:entryValues="@array/moloko_prefs_rtm_dateformat_values"
         android:key="@string/key_dateformat_local"
         moloko:syncWithRtmKey="@string/key_dateformat_sync_with_rtm" />

      <dev.drsoran.moloko.prefs.SyncableListPreference
         android:title="@string/moloko_prefs_rtm_timeformat_title"
         android:summary="%s"
         android:entries="@array/moloko_prefs_rtm_timeformat"
         android:entryValues="@array/moloko_prefs_rtm_timeformat_values"
         android:key="@string/key_timeformat_local"
         moloko:syncWithRtmKey="@string/key_timeformat_sync_with_rtm" />

      <dev.drsoran.moloko.prefs.DefaultListPreference
         android:title="@string/moloko_prefs_rtm_defaultlist_title"
         android:summary="%s"
         android:key="@string/key_def_list_local"
         moloko:syncWithRtmKey="@string/key_def_list_sync_with_rtm" />

      <dev.drsoran.moloko.prefs.RtmSyncStatePreference
         moloko:infoWidget="@layout/moloko_prefs_widget_sync" />
   </PreferenceScreen>

   <PreferenceScreen
      android:title="@string/moloko_prefs_notification_title"
      android:summary="@string/moloko_prefs_notification_summary">

      <PreferenceCategory
         android:title="@string/moloko_prefs_notification_tasks_w_due_cat_title">

         <CheckBoxPreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_title"
            android:summaryOn="@string/phr_on"
            android:summaryOff="@string/phr_off"
            android:key="@string/key_notify_due_tasks"
            android:defaultValue="true" />
         <dev.drsoran.moloko.prefs.AutoSummaryListPreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_before_title"
            android:summary="%s"
            android:entries="@array/moloko_prefs_notification_task_due_before_entries"
            android:entryValues="@array/moloko_prefs_notification_task_due_before_values"
            android:key="@string/key_notify_due_tasks_before"
            android:dependency="@string/key_notify_due_tasks"
            android:defaultValue="@string/moloko_prefs_notification_tasks_w_due_before_default_value" />
         <RingtonePreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_ringtone_title"
            android:showSilent="true"
            android:ringtoneType="all"
            android:key="@string/key_notify_due_tasks_ringtone"
            android:dependency="@string/key_notify_due_tasks" />
         <CheckBoxPreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_vibrate_title"
            android:summaryOn="@string/phr_on"
            android:summaryOff="@string/phr_off"
            android:key="@string/key_notify_due_tasks_vibrate"
            android:dependency="@string/key_notify_due_tasks"
            android:defaultValue="false" />
         <CheckBoxPreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_led_title"
            android:summaryOn="@string/phr_on"
            android:summaryOff="@string/phr_off"
            android:key="@string/key_notify_due_tasks_led"
            android:dependency="@string/key_notify_due_tasks"
            android:defaultValue="false" />
      </PreferenceCategory>

      <PreferenceCategory
         android:title="@string/moloko_prefs_notification_permanent_cat_title">

         <dev.drsoran.moloko.prefs.AutoSummaryListPreference
            android:title="@string/moloko_prefs_notification_tasks_w_due_before_title"
            android:summary="%s"
            android:entries="@array/moloko_prefs_notification_permanent_entries"
            android:entryValues="@array/moloko_prefs_notification_permanent_values"
            android:key="@string/key_notify_permanent"
            android:defaultValue="2" />
      </PreferenceCategory>

   </PreferenceScreen>

   <dev.drsoran.moloko.prefs.StartUpViewPreference
      android:title="@string/moloko_prefs_startup_view_title"
      android:summary="%s"
      android:key="@string/key_startup_view" />

   <dev.drsoran.moloko.prefs.TaskSortPreference
      android:title="@string/moloko_prefs_def_sort_title"
      android:summary="@string/moloko_prefs_def_sort_summary"
      android:entries="@array/app_sort_options"
      android:key="@string/key_task_sort" />

   <PreferenceCategory
      android:title="@string/moloko_prefs_cat_help_dev_title">

      <CheckBoxPreference
         android:key="acra.disable"
         android:title="@string/moloko_prefs_acra_title"
         android:summaryOn="@string/moloko_prefs_acra_summary_off"
         android:summaryOff="@string/moloko_prefs_acra_summary_on"
         android:defaultValue="false" />

      <dev.drsoran.moloko.prefs.SendLogPreference
         moloko:infoText="@string/moloko_prefs_send_log_text"
         moloko:infoWidget="@layout/moloko_prefs_widget_send_log" />

      <dev.drsoran.moloko.prefs.AboutPreference
         moloko:infoText="@string/moloko_about_text"
         moloko:infoWidget="@layout/moloko_prefs_widget_about" />
   </PreferenceCategory>

</PreferenceScreen>
