<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (c) 2013 Ronny Röhricht This file is part of Moloko.
      Moloko is free software: you can redistribute it and/or modify it
      under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version. Moloko is distributed in the
      hope that it will be useful, but WITHOUT ANY WARRANTY; without
      even the implied warranty of MERCHANTABILITY or FITNESS FOR A
      PARTICULAR PURPOSE. See the GNU General Public License for more
      details. You should have received a copy of the GNU General Public
      License along with Moloko. If not, see
      <http://www.gnu.org/licenses/>. Contributors: Ronny Röhricht -
      implementation
   -->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:moloko="http://schemas.android.com/apk/res/dev.drsoran.moloko">

   <CheckBoxPreference
      android:key="@string/key_acra_enable"
      android:title="@string/moloko_prefs_acra_title"
      android:summaryOn="@string/moloko_prefs_acra_summary_on"
      android:summaryOff="@string/moloko_prefs_acra_summary_off"
      android:defaultValue="@string/def_acra_enable" />

   <dev.drsoran.moloko.app.prefs.SendLogPreference
      android:title="@string/moloko_prefs_send_log_text"
      moloko:infoIcon="@drawable/ic_prefs_send_log"
      moloko:infoWidgetLayout="@layout/moloko_prefs_widget_send_log" />

   <dev.drsoran.moloko.app.prefs.SendDbPreference
      android:title="@string/moloko_prefs_send_db_text"
      moloko:infoIcon="@drawable/ic_prefs_send_log"
      moloko:infoWidgetLayout="@layout/moloko_prefs_widget_send_log" />
      
   <dev.drsoran.moloko.app.prefs.ClearDbPreference
      android:title="@string/moloko_prefs_clear_db_text"
      moloko:infoIcon="@drawable/ic_prefs_delete"
      moloko:infoWidgetLayout="@layout/moloko_prefs_widget_clear_db" />

   <dev.drsoran.moloko.app.prefs.AboutPreference
      android:title="@string/moloko_about_text"
      moloko:infoIcon="@drawable/ic_prefs_info"
      moloko:infoWidgetLayout="@layout/moloko_prefs_widget_about" />

</PreferenceScreen>
