<?xml version="1.0" encoding="utf-8"?>
   <!--
      Copyright (c) 2012 Ronny Röhricht This file is part of Moloko.
      Moloko is free software: you can redistribute it and/or modify it
      under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version. Moloko is distributed in the
      hope that it will be useful, but WITHOUT ANY WARRANTY; without
      even the implied warranty of MERCHANTABILITY or FITNESS FOR A
      PARTICULAR PURPOSE. See the GNU General Public License for more
      details. You should have received a copy of the GNU General Public
      License along with Moloko. If not, see
      <http://www.gnu.org/licenses/>. Contributors: Ronny Röhricht -
      implementation
   -->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:moloko="http://schemas.android.com/apk/res/dev.drsoran.moloko">

   <dev.drsoran.moloko.prefs.StartUpViewPreference
      android:title="@string/moloko_prefs_startup_view_title"
      android:summary="%s"
      android:key="@string/key_startup_view" />

   <dev.drsoran.moloko.prefs.TaskSortPreference
      android:title="@string/moloko_prefs_def_sort_title"
      android:summary="@string/moloko_prefs_def_sort_summary"
      android:entries="@array/app_sort_options"
      android:key="@string/key_task_sort" />
    
</PreferenceScreen>
